<resources>
    <string name="app_name">Student Diary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Add Subject</string>

    <string name="title_activity_home">Timetable</string>
    <string name="home">Attendance</string>
    <string name="bunhistory">Bunk History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_subject">NewSubject</string>
    <string name="save">SAVE</string>
    <string name="splash1">STUDENT</string>
    <string name="splash2">DIARY</string>
    <string name="EnterAttendance">Enter Attendance</string>
    <string name="Attend">ATTEND</string>
    <string name="Bunk">BUNK</string>
    <string name="addsubject">Add Subject</string>
    <string name="add">ADD</string>
    <string name="entersubname">Enter Subject Name</string>
    <string name="name_of_the_subject">Name of the subject</string>
    <string name="_8_00_am">8:30 AM</string>
    <string name="subject">SUBJECT</string>
    <string name="contributors">Developers,Contributors</string>
    <string name="names">Vicky Daniel</string>
    <string name="name2">Manoranjan K</string>
    <string name="more">Non-Profit app,Contains no ads.
        For more info Search Creativoid in Google Play</string>




</resources>
